--- a/app/src/App.css
+++ b/app/src/App.css
@@ -93,7 +93,23 @@ button.continue {
 }
 
 .demo-list-item {
-  border: 1px solid rgba(255, 255, 255, 0.51);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  padding: 10px;
+  display: flex;
+    align-items: center;
+}
+
+.demo-list-item img {
+  border-radius: 100%;
+}
+
+.left {
+  text-align: left;
+}
+
+.center {
+  margin: auto;
 }
 
 @keyframes App-logo-spin {
